--- a/static/ml.css
+++ b/static/ml.css
@@ -46,12 +46,11 @@ h1:hover{
 	opacity:.7;
 	box-shadow:0 0 5px 2px lightgrey;
 	transition:1s;
+	margin:0;
 	overflow: auto;
 }
 .box:hover{
-	width:91%;
-	height:31%;
-	margin:0;
+	transform: scale(1.03);
 	box-shadow:0 0 8px 8px lightgrey;
 }
 .but{
@@ -221,7 +220,7 @@ h1:hover{
 	font: 18px forte,vardana;
     color: blue;
 	border-bottom-style: none;
-    border-radius: 10px 10px 10px 0px;
+    border-radius: 10px 10px 0px 0px;
     float: left;
     position: relative;
     top: 26px;
